implemented basic and steam authentication